--- a/game/csbox/html/menu.html
+++ b/game/csbox/html/menu.html
@@ -30,6 +30,15 @@
 				-ms-user-select: none;
 				touch-action: none;
 			}
+
+			body {
+				margin: 0;
+				padding: 0;
+				background: url('background/bg01.png') no-repeat center center fixed;
+				background-size: cover;
+				height: 100vh;
+				width: 100vw;
+			}
 		</style>
 		<script>
 			function togglevisible(show) {
@@ -55,7 +64,7 @@
 	</head>
 	<body>
 		<main>
-			<h1>Combine Sandbox</h1>
+			<h1>Codename: Sandbox</h1>
 			<div id="InGameOnly">
 				<button onclick="alert('cmd:gamemenucommand ResumeGame');">RESUME GAME</button> <br /> <br />
 				<button onclick="alert('cmd:gamemenucommand Disconnect');">DISCONNECT</button> <br /> <br />
